# fitz-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
benchmarks/: BENCHMARK.md  FIXER_LOOP.md  claude_code_baseline.py  claude_code_benchmark.py  decomp_replay.py  end_to_end_cost.py  eval_deterministic.py  eval_plans.py  eval_prompt.py  eval_retrieval.py  eval_retrieval_run.py  eval_v2.py  eval_v2_deterministic.py  eval_v2_schemas.py  eval_v2_taxonomy.py  guard_hook.py  haiku_subagent_bench.py  ideal_context.json  no_harness.py  plan_factory.py  replay_artifact.py  score_taxonomy.py  test_f10_service.py  test_f1_dedup.py  test_f21_stub_confusion.py  test_f25_local_attr.py  test_f6_empty.py  test_f9_compression.py
benchmarks/challenges/csv_export/: taxonomy.json  user_prompt.txt
benchmarks/challenges/hoppscotch_sharing/: README.md  ideal_context.json  retrieval_ground_truth.json  taxonomy.json  user_prompt.txt
benchmarks/challenges/ranking_explanation/: ideal_context.json  retrieval_ground_truth.json  rubric.md  taxonomy.json  user_prompt.txt
benchmarks/challenges/streaming_implementation/: retrieval_ground_truth.json  taxonomy.json  user_prompt.txt
benchmarks/results/: streaming-task-tracker.md
docs/: ARCHITECTURE.md  CONFIG.md  SCORER-V2-SPEC.md  TODO-tech-debt.md  TROUBLESHOOTING.md  backlog_quality_infra.md  decomposition-analysis.md  feature-integrated-model-loading.md  floor-plan-fixes.md  pipeline-architecture.md  plan-decomposed-pipeline.md  postmortem-wmi-deadlock.md  refactor.md  synth_prompt_full.md  synth_prompt_refined.md  synthesis-refactor.md
docs/archive/: overnight-run-report-20260324.md  scratchpad.md  synth_prompt_example.md
docs/archive/failure-patterns-v1/: BISECT-RESULTS.md  F1-duplicate-decisions.md  F10-service-api-fabrication.md  F12-artifact-filename-corruption.md  F14-wrong-service-file-path.md  F15-overfitted-decomp-examples.md  F16-overfitted-resolution-params.md  F17-overfitted-synthesis-examples.md  F18-overfitted-artifact-rules.md  F19-hardcoded-schema-keywords.md  F2-wrong-request-fields.md  F20-decision-redundancy.md  (+11 more)
docs/failure-patterns/: BISECT-RESULTS.md  F10-service-api-fabrication.md  F11-wrong-object-method.md  F12-artifact-filename-corruption.md  F13-upstream-reasoning-failures.md  F14-wrong-service-file-path.md  F2-wrong-request-fields.md  F21-structural-overview-stub-confusion.md  F23-decision-structure-defects.md  F25-unvalidated-local-attr-access.md  F3-cross-artifact-mismatch.md  F5-wrong-import-paths.md  F8-depends-on-int-coercion.md  F9-source-compression-blindness.md  README.md
docs/features/: README.md
docs/findings/: findings-20260324.md
docs/roadmap/: artifact-closure-principle.md  golden-plan-authoring-harness.md  llm-call-quality-layer.md  next-up.md  scaling-agentic-search.md  session-handoff-2026-04-16-02.md  session-handoff-2026-04-16-03.md  session-handoff-2026-04-16.md  todo_confirm_coverage_hint.md  todo_dont_hardcode_decision_amount.md  v2-f7-decision-synthesis-closure.md
docs/scratch/: replace_ast_with_treewalker.md
docs/senior-engineer-todo/: 01-architecture-review-upgrade-regeneration.md  02-assumption-review-regeneration.md  03-design-review-regeneration.md  04-artifact-coverage-review.md  analysis.md
docs/v2-scoring/: BUG_REGISTER.md  TRACKER.md  V2-F1-engine-parse-failure.md  V2-F2-small-artifact-parse-failure.md  V2-F3-missing-yield.md  V2-F4-not-implemented-stub.md  V2-F6-cross-artifact-mismatch.md  V2-F7-missing-required-file.md  V2-F8-fabricated-types.md
examples/: 01_quickstart.py  02_configuration.py  03_mcp_integration.py  README.md
fitz_forge/: __init__.py  __main__.py  cli.py  logging_config.py  server.py
fitz_forge/api_review/: __init__.py  client.py  cost_calculator.py  schemas.py
fitz_forge/background/: __init__.py  lifecycle.py  signals.py  worker.py
fitz_forge/config/: __init__.py  loader.py  prep.py  schema.py
fitz_forge/llm/: __init__.py  client.py  factory.py  generate.py  gpu_monitor.py  llama_cpp.py  lm_studio.py  memory.py  ollama.py  openai_api.py  retry.py  types.py
fitz_forge/models/: __init__.py  events.py  jobs.py  responses.py  schema.py  sqlite_store.py  store.py
fitz_forge/planning/: __init__.py  clarification.py
fitz_forge/tools/: __init__.py  cancel_review.py  check_status.py  confirm_review.py  create_plan.py  get_plan.py  list_plans.py  replay_plan.py  retry_job.py  run_plan.py
fitz_forge/validation/: __init__.py  sanitize.py
fitz_graveyard/: cli.py
fitz_graveyard/api_review/: client.py  cost_calculator.py
fitz_graveyard/background/: worker.py
fitz_graveyard/llm/: client.py  llama_cpp.py  lm_studio.py  retry.py
fitz_graveyard/models/: sqlite_store.py
fitz_graveyard/planning/: clarification.py
fitz_graveyard/tools/: cancel_review.py  check_status.py  confirm_review.py  create_plan.py  get_plan.py  retry_job.py
tests/: conftest.py
tests/unit/: conftest.py  test_agent_gatherer.py  test_agent_stages.py  test_api_review_client.py  test_api_review_schemas.py  test_artifact_closure_cross_artifact_method.py  test_artifact_closure_streaming_sibling.py  test_artifact_generator_semantic_wiring.py  test_artifact_semantic_review.py  test_artifact_validate_unbound_names.py  test_call_graph.py  test_cancel_review.py  test_cli.py  test_compressor.py  test_confidence.py  test_confidence_extra.py  test_config.py  test_confirm_review.py  test_decision_resolution.py  test_decision_schemas.py  test_decomposition_senior_review_wiring.py  test_diagnostics.py  test_extract_provides_surgical.py  test_gpu_monitor.py  test_grounding_instruction.py  test_indexer.py  test_live_scoring.py  test_llama_cpp_client.py  test_llm_client.py  test_lm_studio_client.py  test_memory_monitor.py  test_openai_api_client.py  test_output_checkpoint.py  test_parser.py  test_pipeline_infra.py  test_pipeline_integration.py  test_pipeline_stages.py  test_planning_schemas.py  test_prep.py  test_quality_indicators.py  (+29 more)
tools/: ci_check.py  pre_release.py
(+154 files in other folders)
