# fitz-forge/pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitz-forge"
version = "0.4.1"
description = "MCP server for local-first AI architectural planning using local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Yan Fitzer", email = "yan@example.com" }
]
keywords = ["mcp", "planning", "ai", "model-context-protocol", "ollama", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "ollama>=0.4.0",
    "tenacity>=9.0.0",
    "psutil>=6.1.0",
    "typer>=0.9",
    "rich>=13.0",
    "fitz-sage[code]",
]

[project.optional-dependencies]
api-review = [
    "anthropic>=0.40",
    "CurrencyConverter>=0.17",
]
lm-studio = ["openai>=1.0.0"]
retrieval = ["sentence-transformers>=3.0", "einops>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/yafitzdev/fitz-forge"
Repository = "https://github.com/yafitzdev/fitz-forge"
Issues = "https://github.com/yafitzdev/fitz-forge/issues"
Documentation = "https://github.com/yafitzdev/fitz-forge#readme"

[project.scripts]
fitz = "fitz_forge.cli:app"

[tool.pytest.ini_options]
# -p fitz_forge: forces early import of fitz_forge/__init__.py which
# patches platform._wmi_query before setuptools entry points (faker) load.
# Without this, faker triggers a WMI deadlock on Windows (MS Store Python 3.12).
addopts = "-p fitz_forge --cov=fitz_forge --cov-report=term-missing:skip-covered"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require LLM or database)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_forge*"]
