# fitz-forge/pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitz-forge"
version = "0.6.1"
description = "MCP server for local-first AI architectural planning using local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Yan Fitzer", email = "yan@example.com" }
]
keywords = ["mcp", "planning", "ai", "model-context-protocol", "ollama", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "ollama>=0.4.0",
    "tenacity>=9.0.0",
    "psutil>=6.1.0",
    "typer>=0.9",
    "rich>=13.0",
    "fitz-sage[code]",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
api-review = [
    "anthropic>=0.40",
    "CurrencyConverter>=0.17",
]
lm-studio = ["openai>=1.0.0"]
retrieval = ["sentence-transformers>=3.0", "einops>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/yafitzdev/fitz-forge"
Repository = "https://github.com/yafitzdev/fitz-forge"
Issues = "https://github.com/yafitzdev/fitz-forge/issues"
Documentation = "https://github.com/yafitzdev/fitz-forge#readme"

[project.scripts]
fitz = "fitz_forge.cli:app"

[tool.pytest.ini_options]
# -p fitz_forge: forces early import of fitz_forge/__init__.py which
# patches platform._wmi_query before setuptools entry points (faker) load.
# Without this, faker triggers a WMI deadlock on Windows (MS Store Python 3.12).
addopts = "-p fitz_forge --cov --cov-report=term-missing"
markers = [
    "tier1: critical path tests — run on every commit (<30s)",
    "tier2: unit tests with mocks — run on PR (<2min)",
    "tier3: integration tests — run on merge to main (<10min)",
    "tier4: heavy tests — run nightly (30min+)",
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require LLM or database)",
    "slow: marks tests as slow",
    "llm: tests requiring a real LLM provider",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator — readability preference
    "SIM105", # suppressible-exception — contextlib.suppress() less readable in this codebase
    "SIM102", # collapsible-if — nested ifs often clearer for multi-condition logic
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"benchmarks/**" = ["E402", "B011"]
"fitz_forge/__init__.py" = ["E402"]  # WMI deadlock patch requires early platform import
"fitz_forge/cli.py" = ["E402"]       # imports after WMI patch
"fitz_forge/server.py" = ["E402"]    # imports after WMI patch
"fitz_forge/planning/pipeline/stages/synthesis.py" = ["E741", "B007", "F841"]  # active development

[tool.ruff.lint.isort]
known-first-party = ["fitz_forge"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["fitz_forge"]
omit = ["fitz_forge/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fitz_forge*"]
